--- a/output.css
+++ b/output.css
@@ -548,8 +548,13 @@ h3 {
 }
 
 h4 {
+  padding-bottom: 0.25rem;
   font-weight: 600;
   text-transform: capitalize;
+}
+
+h4 + ul li {
+  line-height: 1.55rem;
 }
 
 p,
@@ -695,20 +700,18 @@ a:hover {
 }
 
 .list-marked > li {
-  /* list-style-type: disc;
-    margin-left: 20px; */
   margin-left: 1.25rem;
-  list-style-type: disc
+  list-style-type: disc;
 }
 
 .list-aside > li {
   line-height: 1.75rem;
 }
 
-.list-pb > li {
-  padding-bottom: 5px;
-}
-
 .link-bold {
   font-weight: 600;
+}
+
+.padding-bottom {
+  padding-bottom: 0.75rem;
 }
