--- a/styles/output.css
+++ b/styles/output.css
@@ -712,6 +712,17 @@ a:hover {
   font-weight: 600;
 }
 
+.link-text {
+  font-weight: 400;
+  line-height: 1.5rem;
+  text-decoration-line: none;
+}
+
+.link-text:hover {
+  --tw-text-opacity: 1;
+  color: rgb(51 65 85 / var(--tw-text-opacity));
+}
+
 .padding-bottom {
   padding-bottom: 0.75rem;
 }
